[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fotos/Moneda.png" type="Texture" id=1]
[ext_resource path="res://Moneda.gd" type="Script" id=2]
[ext_resource path="res://Audio/mario-coin.mp3" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 35, 0, 218, 500 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 253, 0, 218, 500 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 495, 0, 300, 500 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 851, 0, 303, 500 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1245, 0, 250, 500 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1540, 0, 259, 500 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Moviment",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 97.3816, 183.055 )

[node name="Moneda" type="AnimatedSprite"]
position = Vector2( 1530, 915 )
scale = Vector2( 0.071882, 0.0539999 )
frames = SubResource( 13 )
animation = "Moviment"
frame = 4
playing = true
script = ExtResource( 2 )

[node name="Moneda" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Area_moneda" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_moneda"]
position = Vector2( 0, -18.5195 )
shape = SubResource( 14 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.75

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area_moneda" to="." method="_on_Area_moneda_body_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
